# Onnet

./: .gitignore  README.md  pyproject.toml
scripts/: demo_llama3.1.py
src/onett/: __init__.py
