[project]
name = "onett"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "vaps_EVO", email = "vapsok299@gmail.com" }
]
dependencies = [
    "numpy>=2.1.0",
    "torch>=2.4.0",
    "pip>=24.2",
]
readme = "README.md"
requires-python = ">= 3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/onett"]
